공유데이터 BehaviorSubject로 변경 JNUEventTask -> retrofit